--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
       POSTGRES_DB: datamover
       POSTGRES_USER: user
       POSTGRES_PASSWORD_FILE: /run/secrets/db_password
+      # PostgreSQL optimization settings
+      POSTGRES_INITDB_ARGS: "--data-checksums --encoding=UTF8 --locale=C"
+      # Disable PostgreSQL's auto tuning for containerized environment
+      POSTGRES_HOST_AUTH_METHOD: "scram-sha-256"
     volumes:
       - db-data:/var/lib/postgresql/data
       - ./scripts:/docker-entrypoint-initdb.d
@@ -15,6 +19,16 @@ services:
       - "5432:5432"
     secrets:
       - db_password
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U user -d datamover"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    deploy:
+      resources:
+        limits:
+          memory: 512M
 
   adminer:
     image: adminer
@@ -23,10 +37,16 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          memory: 128M
 
 volumes:
   db-data:
+    driver: local
 
 secrets:
   db_password:
